Load google fonts list from json file

--- a/assets/css/block-editor.css
+++ b/assets/css/block-editor.css
@@ -128,3 +128,6 @@
 .wb-button-popover .components-popover__content {
     width: 254px;
 }
+.wb-button-popover .components-panel__body > .components-panel__body-title {
+    padding: 16px;
+}
