--- a/assets/css/admin/general.css
+++ b/assets/css/admin/general.css
@@ -88,7 +88,7 @@ a:focus {
 }
 
 /* Remove padding-left on options page */
-body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"] #wpcontent {
+body[class*="toplevel_page_wcb"] #wpcontent, body[class*="woostify-conversion-block_page"] #wpcontent {
   padding: 0;
 }
 
@@ -223,4 +223,563 @@ body[class*="woostify-welcome"] #wpcontent, body[class*="woostify-options_page"]
 .woostify-welcome-nav li {
   display: inline-block;
   margin: 0;
+}
+
+/* General Addon Settings */
+.woostify-featured-setting.loading .woostify-settings-section-footer .spinner {
+  visibility: visible;
+}
+
+.woostify-featured-setting.loading .woostify-settings-section-footer .info-seuccess {
+  display: none;
+}
+
+.woostify-featured-setting .woostify-settings-section-callback-link {
+  font-weight: normal;
+  font-size: 0.8em;
+  margin-left: 1em;
+  text-decoration: underline dotted;
+  color: currentColor;
+}
+
+.woostify-featured-setting .woostify-settings-box {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.woostify-featured-setting .woostify-settings-content {
+  background-color: #fff;
+  border: 1px solid #d8e2e9;
+}
+
+.woostify-featured-setting .woostify-settings-section-title {
+  padding: 20px 25px;
+  border-bottom: 1px solid #d8e2e9;
+  margin: 0;
+  font-size: 1.2em;
+}
+
+@media (max-width: 767px) {
+  .woostify-featured-setting .woostify-settings-section-title {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.woostify-featured-setting .woostify-settings-section-content {
+  padding: 0 25px 5px 25px;
+  margin: 20px 0;
+}
+
+@media (max-width: 767px) {
+  .woostify-featured-setting .woostify-settings-section-content {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.woostify-featured-setting .woostify-setting-description {
+  font-style: italic;
+  font-size: 12px;
+}
+
+.woostify-featured-setting .woostify-settings-section-footer, .woostify-featured-setting .woostify-settings-section-header {
+  padding: 20px 25px;
+  border-top: 1px solid #d8e2e9;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background: #fff;
+}
+
+.woostify-featured-setting .woostify-settings-section-footer.position-sticky, .woostify-featured-setting .woostify-settings-section-header.position-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  z-index: 10;
+}
+
+.woostify-featured-setting .woostify-settings-section-footer.position-sticky.top, .woostify-featured-setting .woostify-settings-section-header.position-sticky.top {
+  top: 0;
+  bottom: auto;
+}
+
+@media (max-width: 767px) {
+  .woostify-featured-setting .woostify-settings-section-footer, .woostify-featured-setting .woostify-settings-section-header {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.woostify-featured-setting .woostify-settings-section-header {
+  border-top: none;
+  border-bottom: 1px solid #d8e2e9;
+}
+
+.woostify-featured-setting .woostify-settings-section-header.no-border {
+  border: none;
+}
+
+.woostify-featured-setting .spinner {
+  margin-top: 0;
+}
+
+.woostify-featured-setting .save-options {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.woostify-featured-setting select {
+  height: 37px;
+  min-width: 150px;
+  max-width: 100% !important;
+}
+
+.woostify-featured-setting input {
+  max-width: 100% !important;
+}
+
+.woostify-featured-setting input[type="text"], .woostify-featured-setting input[type="number"] {
+  border-radius: 4px;
+  min-height: 37px;
+  padding: 0 10px;
+}
+
+.woostify-featured-setting input[type="checkbox"] {
+  position: relative;
+  border-radius: 2px;
+}
+
+.woostify-featured-setting input[type="checkbox"]:checked {
+  border-color: #1e8cbe;
+}
+
+.woostify-featured-setting input[type="checkbox"]:checked:before {
+  content: '';
+  background-color: #1e8cbe;
+  position: absolute;
+  top: 3px;
+  bottom: 3px;
+  left: 3px;
+  right: 3px;
+  border-radius: 2px;
+  width: auto;
+  height: auto;
+  margin: 0;
+}
+
+.woostify-featured-setting .setting-field-unit input[type="text"], .woostify-featured-setting .setting-field-unit input[type="number"] {
+  margin: 0;
+  border-radius: 4px 0 0 4px;
+}
+
+.woostify-featured-setting textarea {
+  width: 100%;
+  min-height: 65px;
+  padding: 10px;
+  border-radius: 4px;
+  max-width: 100% !important;
+}
+
+@media (max-width: 782px) {
+  .woostify-featured-setting th {
+    margin-bottom: 10px;
+  }
+}
+
+.woostify-settings-section-tab .tab-head-button {
+  padding: 10px 20px;
+  color: initial;
+  font-size: 15px;
+  border: 1px solid #ddd;
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  bottom: -1px;
+  background-color: #f1f1f1;
+  font-weight: normal;
+}
+
+.woostify-settings-section-tab .tab-head-button.active {
+  background-color: #fff;
+  border-bottom-color: #fff;
+}
+
+.woostify-settings-section-tab .woostify-setting-tab-content-wrapper {
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+
+.woostify-settings-section-tab .woostify-setting-tab-content:not(.active) {
+  display: none;
+}
+
+.woostify-settings-section-tab .woostify-setting-tab-content th {
+  width: 220px;
+}
+
+.admin-product-filter [type="checkbox"],
+.woostify-options-wrap [type="checkbox"] {
+  position: relative;
+  border-radius: 2px;
+  border-width: 2px;
+}
+
+.admin-product-filter [type="checkbox"]:focus,
+.woostify-options-wrap [type="checkbox"]:focus {
+  box-shadow: none;
+}
+
+.admin-product-filter [type="checkbox"]:checked,
+.woostify-options-wrap [type="checkbox"]:checked {
+  border-color: #1e8cbe;
+}
+
+.admin-product-filter [type="checkbox"]:checked:before,
+.woostify-options-wrap [type="checkbox"]:checked:before {
+  content: '';
+  background-color: #1e8cbe;
+  position: absolute;
+  top: 2px;
+  bottom: 2px;
+  left: 2px;
+  right: 2px;
+  border-radius: 2px;
+  width: auto;
+  height: auto;
+  margin: 0;
+}
+
+.admin-product-filter .index-button-wrap,
+.woostify-options-wrap .index-button-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.admin-product-filter .index-button-wrap .spinner,
+.woostify-options-wrap .index-button-wrap .spinner {
+  margin-top: 0;
+}
+
+.admin-product-filter .index-button-wrap.loading .spinner,
+.woostify-options-wrap .index-button-wrap.loading .spinner {
+  visibility: visible;
+}
+
+.admin-product-filter .info-seuccess,
+.woostify-options-wrap .info-seuccess {
+  margin-left: 10px;
+  color: #28a745;
+}
+
+.table-setting-separator {
+  height: 1px;
+  background-color: #ddd;
+  padding: 0 !important;
+}
+
+.table-setting-heading,
+th.table-setting-heading {
+  font-size: 15px;
+  font-weight: bold;
+  padding-left: 10px;
+  position: relative;
+}
+
+.table-setting-heading:before,
+th.table-setting-heading:before {
+  display: block;
+  content: "";
+  width: 3px;
+  height: 26px;
+  position: absolute;
+  background: #001099;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.pt-0 {
+  padding-top: -0 !important;
+}
+
+.setting-field-unit {
+  display: flex;
+}
+
+.setting-field-unit * {
+  vertical-align: middle;
+}
+
+.setting-field-unit input, .setting-field-unit select {
+  margin: 0;
+}
+
+.setting-field-unit select.setting-field-unit-select {
+  min-width: 30px;
+  margin: 0;
+  border-radius: 0 3px 4px 0;
+  border-left: 0;
+  background-color: #f5f5f5;
+  font-weight: bold;
+}
+
+.woostify-admin-sub-menu-text {
+  margin-left: 5px;
+  font-size: 0.9em;
+}
+
+/* Multi dependency */
+.woostify-multi-dependency .woostify-multi-dependency-item:not(.active) {
+  display: none;
+}
+
+/* Countdown urgency */
+.woostify-countdown-urgency-setting [name=woostify_countdown_urgency_apply_for],
+.woostify-countdown-urgency-setting [name=woostify_countdown_urgency_style] {
+  min-width: 300px;
+}
+
+.woostify-countdown-urgency-setting .countdown-urgency-time-duration {
+  display: inline-flex;
+  width: 100%;
+  align-items: center;
+}
+
+@media (min-width: 992px) {
+  .woostify-countdown-urgency-setting .countdown-urgency-time-duration {
+    max-width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .woostify-countdown-urgency-setting .countdown-urgency-time-duration {
+    flex-direction: column;
+  }
+  .woostify-countdown-urgency-setting .countdown-urgency-time-duration input {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+
+.woostify-countdown-urgency-setting .countdown-urgency-time-duration input {
+  flex-grow: 1;
+  margin-right: 5px;
+}
+
+.woostify-countdown-urgency-setting .countdown-urgency-label {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 600px) {
+  .woostify-countdown-urgency-setting .countdown-urgency-label {
+    flex-direction: column;
+  }
+}
+
+.woostify-countdown-urgency-setting .countdown-urgency-label label {
+  flex-basis: 24%;
+}
+
+@media (max-width: 600px) {
+  .woostify-countdown-urgency-setting .countdown-urgency-label label {
+    flex-basis: 100%;
+  }
+  .woostify-countdown-urgency-setting .countdown-urgency-label label + label {
+    margin-top: 10px;
+  }
+}
+
+.woostify-countdown-urgency-setting .countdown-urgency-label input {
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Variation swatches */
+.woostify-variation-swatches-setting [name=woostify_variation_swatches_size] {
+  max-width: 75px;
+}
+
+/* Sale notification */
+.woostify-sale-notification-setting select {
+  min-width: 170px;
+}
+
+.woostify-sale-notification-setting input[type="text"], .woostify-sale-notification-setting input[type="number"] {
+  min-width: 170px;
+}
+
+.woostify-sale-notification-box-message .woostify-sale-notification-message-inner {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.woostify-sale-notification-box-message .woostify-sale-notification-remove-message {
+  margin-left: 20px;
+}
+
+/* Size guide */
+/* For metabox size-guide */
+.woostify-metabox-option-content .woostify-multi-select-selection .woostify-multi-select-id {
+  padding: 3px 6px;
+}
+
+.woostify-metabox-option-content .woostify-multi-select-selection .woostify-multi-select-search {
+  border: 0;
+  box-shadow: none;
+}
+
+.woostify-metabox-option-content .woostify-multi-select-selection .woostify-multi-select-search:focus {
+  box-shadow: none;
+}
+
+.woostify-metabox-option-content .woostify-multi-select-dropdown .woostify-multi-select-id {
+  padding: 5px 8px;
+}
+
+/* Meta Boxes */
+.woostify-pro-hfb-options-wrapper .woostify-metabox-option {
+  padding: 10px 15px;
+}
+
+.woostify-pro-hfb-options-wrapper .woostify-metabox-option .woostify-metabox-option-title {
+  display: inline-block;
+}
+
+.woostify-pro-hfb-options-wrapper .woostify-metabox-option .woostify-metabox-option-control {
+  box-sizing: border-box;
+  border-radius: 2px;
+}
+
+.woostify-pro-hfb-options-wrapper .condition-group .child-item {
+  margin: 0;
+}
+
+.woostify-select-all-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 250px;
+  height: 28px;
+  border-radius: 2px 2px 0 0;
+  border: 1px solid #7e8993;
+  cursor: pointer;
+}
+
+.woostify-select-all-post .woostify-select-all {
+  padding-left: 10px;
+}
+
+.woostify-select-all-post .woostify-arrow {
+  padding: 0 10px;
+}
+
+.woostify-section-select-post.select-all .woostify-select-all-post {
+  border-radius: 2px;
+}
+
+.woostify-section-select-post.render--post .woostify-section-render--post {
+  border: 1px solid #7e8993;
+  border-top: none;
+  width: 250px;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.woostify-section-select-post.render--post .woostify--hf-post-name {
+  border: none;
+  width: auto;
+  display: inline-block;
+  min-height: unset;
+}
+
+.woostify-section-select-post.render--post .woostify--hf-post-name:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.woostify-section-select-post.render--post.has-option .woostify-section-render--post {
+  padding: 0;
+  border: none;
+}
+
+.woostify-auto-complete-field {
+  border: 1px solid #7e8993;
+  max-width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 100%;
+  border-radius: 2px;
+}
+
+.woostify-auto-complete-field .woostify-auto-complete-key {
+  font-size: 13px;
+  display: flex;
+  margin: 3px 0 3px 4px;
+  color: #32373c;
+  overflow: hidden;
+  background-color: #e2e4e7;
+  border-radius: 2px;
+  padding: 2px 3px 2px 5px;
+  align-items: center;
+}
+
+.woostify-auto-complete-field .btn-woostify-auto-complete-delete {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #191e23;
+  padding-top: 2px;
+  margin-left: 2px;
+  cursor: pointer;
+}
+
+.input-item-wrapper .woostify-data {
+  max-height: 240px;
+  margin-top: -1px;
+}
+
+.input-item-wrapper .woostify-data .woostify-hf-list-post {
+  max-height: 240px;
+  max-width: 250px;
+}
+
+.input-item-wrapper .woostify-data .hf-list-post {
+  max-height: 240px;
+  overflow-y: scroll;
+  margin: 0;
+  border: 1px solid #7e8993;
+  padding: 0;
+}
+
+.input-item-wrapper .woostify-data .hf-list-post li {
+  cursor: pointer;
+  padding: 5px 15px;
+  margin: 0;
+}
+
+.input-item-wrapper .woostify-data .hf-list-post li:hover {
+  background-color: #007cba;
+  color: #fff;
+}
+
+.input-item-wrapper .woostify-data .hf-list-post li.disabled {
+  opacity: 0.5;
+}
+
+.input-item-wrapper .woostify-data .hf-list-post li.disabled:hover {
+  background: transparent;
+  color: inherit;
+  cursor: default;
+}
+
+.hidden {
+  display: none;
 }
