--- a/assets/css/admin/general.css
+++ b/assets/css/admin/general.css
@@ -783,3 +783,17 @@ th.table-setting-heading:before {
 .hidden {
   display: none;
 }
+
+.no-arrows {
+  /* Chrome, Safari, Edge, Opera */
+}
+
+.no-arrows::-webkit-outer-spin-button, .no-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number].no-arrows {
+  -moz-appearance: textfield;
+}
