--- a/src/styles/__admin_editor_custom.scss
+++ b/src/styles/__admin_editor_custom.scss
@@ -1,4 +1,8 @@
 .wcb-inspectorControls__panelBody {
+	.components-panel {
+		@apply z-[1];
+	}
+
 	.components-focal-point-picker,
 	.components-focal-point-picker__media {
 		@apply rounded-lg;
