--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+//
 @import "./_theme_var";
 @import "./_theme_fonts";
 @import "./_theme_colors";
