--- a/src/block-container-box/editor.scss
+++ b/src/block-container-box/editor.scss
@@ -4,6 +4,13 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-ncmaz-core {
-	border: 1px dotted #f00;
+.wp-block-wcb-container-box {
+	@apply p-10 border border-slate-300 hover:border-slate-500 border-dashed flex items-center justify-center;
+	.block-editor-button-block-appender {
+		@apply text-slate-500 hover:text-slate-700;
+		box-shadow: inset 0 0 0 1px #cbd5e1;
+		&:hover {
+			box-shadow: inset 0 0 0 1px #475569;
+		}
+	}
 }
