--- a/src/styles/__theme_var.scss
+++ b/src/styles/__theme_var.scss
@@ -8,4 +8,8 @@
 	--radius-2xl: 1rem;
 	--radius-3xl: 1.5rem;
 	--radius-full: 9999px;
+
+	/* SCREENS */
+	--media-md: 768px;
+	--media-lg: 1024px;
 }
