update container and container-box css for done...

--- a/src/block-container-box/editor.scss
+++ b/src/block-container-box/editor.scss
@@ -5,7 +5,7 @@
  */
 
 .wp-block-wcb-container-box {
-	@apply p-10 border border-slate-300 hover:border-slate-500 border-dashed flex items-center justify-center;
+	/* @apply p-10 border border-slate-300 hover:border-slate-500 border-dashed flex items-center justify-center; */
 	.block-editor-button-block-appender {
 		@apply text-slate-500 hover:text-slate-700;
 		box-shadow: inset 0 0 0 1px #cbd5e1;
