--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,3 +1,34 @@
+.block-editor-block-variation-picker__variations.block-editor-block-variation-picker__variations {
+	column-gap: 1rem;
+	row-gap: 1rem;
+}
+
+.wcb-container__inner {
+	.block-list-appender.wp-block {
+		/* width: 100%; */
+		/* @apply border border-slate-300 border-dashed; */
+		box-shadow: inset 0 0 0 1px #cbd5e1;
+		&:hover {
+			box-shadow: inset 0 0 0 1px #475569;
+		}
+	}
+}
+
+.wcb-container-box__wrap {
+	&:before {
+		content: "";
+		@apply absolute inset-0 border border-dashed border-slate-300;
+	}
+	&:hover::before {
+		@apply border-slate-500;
+	}
+	&.has-child-selected {
+		&:before {
+			display: none !important;
+		}
+	}
+}
+
 .wcb-VideoBackgroundByBgControl {
 	position: absolute;
 	inset: 0;
