--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,3 +1,104 @@
+/*  */
+.wcb-inspectorControls__panel {
+	.components-tab-panel__tabs {
+		@apply bg-neutral-200/80 text-neutral-700 p-1;
+		.components-button {
+			@apply shadow-none focus:shadow-none rounded-md;
+			&.active-tab {
+				@apply bg-white shadow-lg text-black;
+			}
+		}
+	}
+	.wcb-bodyControls__panel {
+		.components-tab-panel__tabs {
+			@apply bg-neutral-200/60 text-neutral-700 p-2 rounded-t-lg mb-0;
+		}
+		.components-tab-panel__tabs-item {
+			@apply h-10;
+		}
+		.components-tab-panel__tab-content {
+			@apply border-2 bottom-0 border-slate-200/60 rounded-b-lg py-3 px-2 mt-0;
+		}
+	}
+
+	.components-panel {
+		@apply z-[1];
+	}
+
+	.components-focal-point-picker,
+	.components-focal-point-picker__media {
+		@apply rounded-lg;
+	}
+
+	.wcb-MySelect {
+		.components-base-control__field,
+		.components-base-control {
+			@apply mb-0 #{!important};
+		}
+	}
+
+	.components-toggle-group-control,
+	.components-toggle-group-control-option-base,
+	.components-custom-gradient-picker__gradient-bar,
+	.components-select-control__input {
+		@apply rounded-lg;
+	}
+	.components-toggle-group-control > [role="presentation"] {
+		@apply rounded-md;
+	}
+
+	.components-input-control__backdrop {
+		@apply rounded-lg border-slate-200;
+	}
+
+	.components-input-control__container {
+		@apply rounded-lg;
+	}
+
+	.components-custom-gradient-picker {
+		.components-input-control__container {
+			input.components-input-control__input {
+				@apply pl-1 pr-0.5 text-center #{!important};
+			}
+			.components-input-control__suffix .components-truncate.components-text {
+				@apply mr-2 #{!important};
+			}
+		}
+	}
+
+	.component-box-control__reset-button,
+	.component-box-control__linked-button {
+		@apply rounded-md;
+	}
+
+	.components-button-group {
+		@apply inline-flex;
+		.components-button {
+			@apply mr-1.5 mb-1.5 rounded-lg ring-1 border-0 shadow-none;
+			&.is-primary {
+				@apply bg-sky-500 ring-sky-500 text-white shadow-none;
+			}
+			&.is-secondary {
+				@apply bg-white text-slate-700 ring-slate-300 hover:ring-slate-400 hover:shadow-none;
+			}
+		}
+	}
+
+	.components-button {
+		@apply rounded-md;
+		&.active-tab {
+		}
+	}
+	select.components-unit-control__select {
+		@apply rounded-r-lg #{!important};
+	}
+
+	.components-font-size-picker__controls {
+		@apply mb-0;
+	}
+}
+
+/*  */
 .block-editor-block-variation-picker__variations.block-editor-block-variation-picker__variations {
 	column-gap: 1rem;
 	row-gap: 1rem;
@@ -5,8 +106,6 @@
 
 .wcb-container__inner {
 	.block-list-appender.wp-block {
-		/* width: 100%; */
-		/* @apply border border-slate-300 border-dashed; */
 		box-shadow: inset 0 0 0 1px #cbd5e1;
 		&:hover {
 			box-shadow: inset 0 0 0 1px #475569;
@@ -30,20 +129,22 @@
 }
 
 .wcb-VideoBackgroundByBgControl {
-	position: absolute;
-	inset: 0;
-	z-index: 0;
-	overflow: hidden;
+	@apply absolute inset-0 z-0 overflow-hidden;
 	video {
-		position: absolute;
-		inset: 0;
-		z-index: 0;
-		max-width: unset;
+		@apply absolute inset-0 z-0 max-w-none min-w-full min-h-full w-full h-full object-cover;
 		max-height: unset;
-		min-width: 100%;
-		min-height: 100%;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
+	}
+}
+
+/*  */
+.components-border-control {
+	.components-flex {
+		@apply rounded-lg;
+	}
+	.components-border-control-dropdown {
+		@apply rounded-l-lg;
+	}
+	.components-input-control {
+		@apply rounded-r-lg;
 	}
 }
