--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -1,4 +1,3 @@
-/*  */
 .wcb-inspectorControls__panel {
 	.components-tab-panel__tabs {
 		@apply bg-neutral-200/80 text-neutral-700 p-1;
@@ -106,15 +105,36 @@
 }
 
 .wcb-container__inner {
+	@apply select-none;
 	.block-list-appender.wp-block {
 		box-shadow: inset 0 0 0 1px #cbd5e1;
 		&:hover {
 			box-shadow: inset 0 0 0 1px #475569;
 		}
+		position: absolute;
+		list-style: none;
+		padding: 0;
+		z-index: 2;
+		bottom: 0;
+		right: 0;
+		button {
+			padding: 0;
+		}
+		&:only-child {
+			position: relative;
+			right: auto;
+			align-self: center;
+			list-style: none;
+			line-height: inherit;
+			button {
+				padding: 12px;
+			}
+		}
 	}
 }
 
 .wcb-container-box__wrap {
+	@apply select-none;
 	&:before {
 		content: "";
 		@apply absolute inset-0 border border-dashed border-slate-300;
@@ -125,6 +145,18 @@
 	&.has-child-selected {
 		&:before {
 			display: none !important;
+		}
+	}
+}
+
+.wcb-container-box__inner {
+	@apply select-none;
+	&:after {
+		inset: calc(-1rem + 1px) !important;
+	}
+	&.has-child-selected {
+		&:after {
+			inset: 1px !important;
 		}
 	}
 }
@@ -147,5 +179,8 @@
 	}
 	.components-input-control {
 		@apply rounded-r-lg;
+	}
+	button.components-button.is-tertiary {
+		@apply rounded-l-lg;
 	}
 }
