--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -35,7 +35,7 @@
 			@apply mb-0 #{!important};
 		}
 	}
-
+	.components-combobox-control__suggestions-container,
 	.components-toggle-group-control,
 	.components-toggle-group-control-option-base,
 	.components-custom-gradient-picker__gradient-bar,
