update pótgrid block

--- a/src/block-common-css/editor.scss
+++ b/src/block-common-css/editor.scss
@@ -16,7 +16,7 @@
 			@apply h-10;
 		}
 		.components-tab-panel__tab-content {
-			@apply border-2 bottom-0 border-slate-200/60 rounded-b-lg py-3 px-2 mt-0;
+			@apply border-2 bottom-0 border-slate-200/60 rounded-b-xl py-3 px-2 mt-0;
 		}
 	}
 
