--- a/src/block-posts-grid/common.scss
+++ b/src/block-posts-grid/common.scss
@@ -34,7 +34,12 @@
 	}
 }
 
+.wcbPostCard__content {
+	position: relative;
+}
+
 .wcbPostCard__featuredImage {
+	position: relative;
 	img {
 		display: block;
 		width: 100%;
@@ -54,6 +59,12 @@
 
 .wcbPostCard__taxonomies {
 	overflow-wrap: normal;
+	&--Insidefeaturedimage {
+		position: absolute;
+		z-index: 1;
+		bottom: 12px;
+		left: 1rem;
+	}
 	&--highlighted {
 		> a {
 			display: inline-block;
@@ -79,6 +90,9 @@
 		justify-content: center;
 		text-decoration: none;
 		@apply space-x-1 py-1 px-3;
+		&.prev {
+			transform: rotate(180deg);
+		}
 	}
 }
 
@@ -96,7 +110,10 @@
 .wcbPostCard__meta-author {
 	display: flex;
 	align-items: center;
+	line-height: 1;
 	margin-right: 1rem;
+	margin-bottom: 2px;
+	margin-top: 2px;
 }
 
 .wcbPostCard__meta-author-name {
@@ -114,6 +131,9 @@
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: flex-start;
+	line-height: 1;
+	margin-bottom: 2px;
+	margin-top: 2px;
 	@apply space-x-2;
 }
 
