--- a/src/block-radio/common.scss
+++ b/src/block-radio/common.scss
@@ -6,6 +6,11 @@
 
 .wcb-radio__option {
 	@apply inline-flex items-center;
+	input {
+		&.round {
+			border-radius: 999px !important;
+		}
+	}
 }
 
 .wcb-radio__option-label {
